@@ -54,6 +54,7 @@
         ul li ul li {
             list-style-type: disc;
         }
+
     </style>
 </head>
 
@@ -71,7 +72,7 @@
 </p>
 
 <p>
-    <a href="https://trac.cyberduck.io/milestone/6.2.12"><strong>Version 6.2.12</strong></a>
+    <a href="https://trac.cyberduck.io/milestone/6.3"><strong>Version 6.3</strong></a>
 </p>
 <ul>
     <li><span class="label label-success">Feature</span> Support for DRACOON cloud service (DRACOON)</li>
@@ -79,6 +80,9 @@
     <li><span class="label label-success">Feature</span> Support for China (Beijing) region (S3)</li>
     <li><span class="label label-warning">Bugfix</span> Allow custom endpoint with default connection profile (S3)</li>
     <li><span class="label label-warning">Bugfix</span> Unnecessary password prompt for connection (Local Disk)</li>
+    <li><span class="label label-warning">Bugfix</span> Login where authentication is required with both password and
+        one-time passcode (SFTP)
+    </li>
 </ul>
 
 <p>
